--- a/LootLogger/Base.lproj/Main.storyboard
+++ b/LootLogger/Base.lproj/Main.storyboard
@@ -123,10 +123,10 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="646"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="MW9-DA-Ftz" userLabel="Form stack view">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="190.33333333333334"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="360"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="y0N-4p-snF" userLabel="Name stack view">
-                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="34"/>
+                                                        <rect key="frame" x="8" y="8" width="359" height="34"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wx7-fE-HMc">
                                                                 <rect key="frame" x="0.0" y="0.0" width="45" height="34"/>
@@ -135,7 +135,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sS5-v5-vKy">
-                                                                <rect key="frame" x="49" y="0.0" width="326" height="34"/>
+                                                                <rect key="frame" x="49" y="0.0" width="310" height="34"/>
                                                                 <color key="backgroundColor" systemColor="tertiarySystemFillColor" red="0.46274509800000002" green="0.46274509800000002" blue="0.50196078430000002" alpha="0.12" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="34" id="5B5-IS-4RU"/>
@@ -150,7 +150,7 @@
                                                         <variation key="heightClass=compact" axis="vertical" distribution="fillEqually"/>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ldE-SL-m0j" userLabel="Serial stack view">
-                                                        <rect key="frame" x="0.0" y="42" width="375" height="34"/>
+                                                        <rect key="frame" x="8" y="50" width="359" height="34"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Serial" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgE-iB-Ju7">
                                                                 <rect key="frame" x="0.0" y="0.0" width="42.666666666666664" height="34"/>
@@ -159,7 +159,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zsk-HO-7jt">
-                                                                <rect key="frame" x="50.666666666666657" y="0.0" width="324.33333333333337" height="34"/>
+                                                                <rect key="frame" x="50.666666666666657" y="0.0" width="308.33333333333337" height="34"/>
                                                                 <color key="backgroundColor" systemColor="tertiarySystemFillColor" red="0.46274509800000002" green="0.46274509800000002" blue="0.50196078430000002" alpha="0.12" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="34" id="J4C-uN-L0r"/>
@@ -174,7 +174,7 @@
                                                         <variation key="heightClass=compact" axis="vertical" distribution="fillEqually"/>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Pu4-IE-y9t" userLabel="Value stack view">
-                                                        <rect key="frame" x="0.0" y="84" width="375" height="34"/>
+                                                        <rect key="frame" x="8" y="92" width="359" height="34"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1TY-FQ-bqF">
                                                                 <rect key="frame" x="0.0" y="0.0" width="42" height="34"/>
@@ -183,7 +183,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wLR-AI-flp">
-                                                                <rect key="frame" x="50" y="0.0" width="325" height="34"/>
+                                                                <rect key="frame" x="50" y="0.0" width="309" height="34"/>
                                                                 <color key="backgroundColor" systemColor="tertiarySystemFillColor" red="0.46274509800000002" green="0.46274509800000002" blue="0.50196078430000002" alpha="0.12" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="34" id="EuV-wD-UTX"/>
@@ -198,10 +198,10 @@
                                                         <variation key="heightClass=compact" axis="vertical" distribution="fillEqually"/>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="p1e-bK-otj">
-                                                        <rect key="frame" x="0.0" y="126" width="375" height="64.333333333333314"/>
+                                                        <rect key="frame" x="8" y="134" width="359" height="218"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6F-qO-8Z6">
-                                                                <rect key="frame" x="0.0" y="0.0" width="375" height="26.333333333333332"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="359" height="180"/>
                                                                 <gestureRecognizers/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
@@ -211,7 +211,7 @@
                                                                 </connections>
                                                             </label>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kAf-MT-Jtc">
-                                                                <rect key="frame" x="0.0" y="34.333333333333343" width="375" height="30"/>
+                                                                <rect key="frame" x="0.0" y="188" width="359" height="30"/>
                                                                 <state key="normal" title="Edit date"/>
                                                                 <connections>
                                                                     <action selector="EditDate:" destination="EBU-GG-J5R" eventType="touchUpInside" id="YS7-F1-2ta"/>
@@ -221,9 +221,13 @@
                                                         </subviews>
                                                     </stackView>
                                                 </subviews>
+                                                <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="8" bottom="0.0" trailing="8"/>
+                                                <variation key="heightClass=regular">
+                                                    <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
+                                                </variation>
                                             </stackView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="FoR-5P-gCt">
-                                                <rect key="frame" x="0.0" y="198.33333333333329" width="375" height="447.66666666666674"/>
+                                                <rect key="frame" x="0.0" y="368" width="375" height="278"/>
                                             </imageView>
                                         </subviews>
                                         <variation key="heightClass=compact" axis="horizontal" distribution="fillEqually"/>
